--- a/.gitignore
+++ b/.gitignore
@@ -23,15 +23,15 @@
 /test/.vscode
 /test/lib/readme.txt
 .DS_Store
-/src/Ark-Cpp-Client-lib.dir
+/src/Phantom-Cpp-Client-lib.dir
 /src/CMakeFiles
 /src/cmake_install.cmake
-/src/Ark-Cpp-Client-lib.vcxproj.filters
-/src/Ark-Cpp-Client-lib.vcxproj
-/src/Ark-Cpp-Client-lib.sln
+/src/Phantom-Cpp-Client-lib.vcxproj.filters
+/src/Phantom-Cpp-Client-lib.vcxproj
+/src/Phantom-Cpp-Client-lib.sln
 /src/ALL_BUILD.vcxproj.filters
 /src/ALL_BUILD.vcxproj
-/test/Ark-Cpp-Client-tests.dir
+/test/Phantom-Cpp-Client-tests.dir
 /Win32
 /test/NightlyMemoryCheck.vcxproj.filters
 /test/NightlyMemoryCheck.vcxproj
@@ -47,9 +47,9 @@
 /test/CMakeFiles/generate.stamp.depend
 /test/CMakeFiles/generate.stamp
 /test/CMakeFiles
-/test/Ark-Cpp-Client-tests.vcxproj.filters
-/test/Ark-Cpp-Client-tests.vcxproj
-/test/Ark-Cpp-Client-tests.sln
+/test/Phantom-Cpp-Client-tests.vcxproj.filters
+/test/Phantom-Cpp-Client-tests.vcxproj
+/test/Phantom-Cpp-Client-tests.sln
 /test/ALL_BUILD.vcxproj.filters
 /test/ALL_BUILD.vcxproj
 /_3rdParty
@@ -57,7 +57,7 @@
 /ZERO_CHECK.vcxproj
 /cmake_install.cmake
 /CMakeCache.txt
-/Ark-Cpp-Client.sln
+/Phantom-Cpp-Client.sln
 /ALL_BUILD.vcxproj.filters
 /ALL_BUILD.vcxproj
 /src/Win32
