--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=Ark-Cpp-Client
+name=Phantom-Cpp-Client
 version=0.1.0
 author=sleepdefic1t, ciband
 maintainer=sleepdefic1t
-sentence=Ark Ecosystem Cpp Wrapper
-paragraph=A C++/Cpp library with Blockchain/Crypto support for the Ark Ecosystem 
+sentence=PhantomChain Cpp Wrapper
+paragraph=A C++/Cpp library with Blockchain/Crypto support for the PhantomChain
 category=Communication
-url=https://github.com/ArkEcosystem/Cpp-Client
+url=https://github.com/PhantomChain/Cpp-Client
 architectures=*
-includes=arkClient.h
+includes=phantomClient.h
